trunk/cslc/test/csl_v2/memory_map_invalid/memory_map_set_prefix_test4.csl
csl_memory_map_page mpage1{
	mpage1(){
		add_address_range(0,23);
}
};
csl_memory_map_page mpage2{
	mpage2(){
		set_address_increment(34);
    set_next_address(35);
}
}; 
csl_memory_map mm{
	mpage1 mp1;
	mpage2 mp2;
	mm(){
    
	  set_type(hierarchical);
    set_data_word_width(32);
    mp2.set_next_address(mp2.get_next_address());
    mp2.add_reserved_address_range(34,45);
    mp1.set_alignment(4);
    mp1.set_endianess(little_endian);
    //mp1.set_symbol_max_length(23);
    set_prefix(2+3);//error
   
}
};
